cmake_minimum_required(VERSION 3.17)
project(Cookies_CPP)
set(CMAKE_CXX_STANDARD 17)
add_library(Cookies_CPP Cookies/Util/Permutation.h Cookies/Set/Set.h Cookies/Set/DisjointSet.h Cookies/Tuple/Pair.h Cookies/Tuple/Unit.h Cookies/Tuple/Triplet.h Cookies/Graph/Graph.h)
add_executable(Test Test/PermutationTest.cpp Cookies/Tuple/Pair.h Cookies/Tuple/Unit.h Cookies/Tuple/Triplet.h Cookies/Graph/Graph.h Cookies/Set/Set.h Cookies/Set/DisjointSet.h Cookies/Util/Permutation.h)