cmake_minimum_required(VERSION 3.17)
project(Cookies_CPP)
set(CMAKE_CXX_STANDARD 17)
add_library(Cookies_CPP Cookies/Util/BigInteger.h Cookies/Search/BinarySearch.h Cookies/Sort/TimSort.h Cookies/Sort/QuickSort.h Cookies/Comparator.h Cookies/Graph/DoubleLength.h Cookies/Graph/IntegerLength.h Cookies/Graph/LengthInterface.h Cookies/Graph/WeightedGraph.h Cookies/Util/Permutation.h Cookies/Set/Set.h Cookies/Set/DisjointSet.h Cookies/Tuple/Pair.h Cookies/Tuple/Unit.h Cookies/Tuple/Triplet.h Cookies/Graph/Graph.h)
add_executable(Test Test/WeightedGraphTest.cpp Cookies/Util/BigInteger.h Cookies/Search/BinarySearch.h Cookies/Sort/TimSort.h Cookies/Sort/QuickSort.h Cookies/Comparator.h Cookies/Graph/DoubleLength.h Cookies/Graph/IntegerLength.h Cookies/Graph/LengthInterface.h Cookies/Graph/WeightedGraph.h Cookies/Tuple/Pair.h Cookies/Tuple/Unit.h Cookies/Tuple/Triplet.h Cookies/Graph/Graph.h Cookies/Set/Set.h Cookies/Set/DisjointSet.h Cookies/Util/Permutation.h)